[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/BatExample.png" type="Texture" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[node name="Enemy0" type="KinematicBody"]
collision_layer = 16
collision_mask = 7
script = ExtResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.212818, 0, 0, 0, 0.212818, 0, 0, 0, 0.212818, 0, 0, 0 )
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="Hitbox" type="Area" parent="."]
collision_layer = 16

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 4 )
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_screen_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
